--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zerobot",
   "version": "3.0.0",
-  "description": "Discord bot for the ZTM community",
+  "description": "Discord bot for the ZTM community!",
   "main": "bot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
