--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^11.4.2"
+    "discord.js": "^11.4.2",
+    "moment": "^2.22.2",
+    "mongodb": "^3.1.10",
+    "node-cron": "^2.0.3",
+    "node-fetch": "^2.3.0"
   }
 }
