--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "discord.js": "^11.4.2",
     "moment": "^2.22.2",
     "mongodb": "^3.1.10",
+    "mongoose": "^5.3.14",
     "node-cron": "^2.0.3",
     "node-fetch": "^2.3.0"
   }
